bluec-tests/tests/valid/typedef/same_identifier_different_scopes2.c
int main(void) {
    typedef int AA;
    {
        AA AA = 1;
        int BB = AA * 2;
        return BB;
    }
}