bluec-tests/tests/invalid/types_fn_pointer/cast_to_declarator.c
int get(void) {
    return 1;
}

int main(void)
{
    return (int (*fn)(void))get;
}